--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "simple-covid19-json-fetcher": "^1.5.0",
     "swr": "^0.4.0",
