--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.16.1",
+    "emailjs-com": "^2.6.4",
     "mdbreact": "^5.0.1",
     "postcss": "^8.2.4",
     "react": "^16.13.1",
