--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:css": "postcss src/tailwind.css -o src/index.css",
     "watch:css": "postcss src/tailwind.css -o src/index.css -w",
     "start": "npm run build:css && react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "CI=false && npm run purge:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
